--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+</head>
+<body>
+	Test
+</body>
+</html>
