Gitignore and project structure fixes

--- a/src/index.html
+++ b/src/index.html
@@ -151,7 +151,7 @@
 		</main>
 	</div>
 
-<!-- build:js js/complete.js -->
+<!-- build:js public/js/complete.js -->
 <script src="libs/jquery/dist/jquery.min.js"></script>
 <script src="js/main.js"></script>
 <!-- endbuild -->
