Optimization, navigation for mobile, channel preview behaviour

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="wr">
 		<header class="head">
 			<h1>Тп</h1>
-			<nav>
+			<nav class="date-nav">
 				<a href="" class="active">Сегодня</a>
 				<a href="">29, вт</a>
 				<a href="">30, ср</a>
@@ -23,7 +23,7 @@
 		</header>
 
 		<main class="main">
-			<div class="channel tv1 channel--little">
+			<div class="channel tv1 channel--little" id="tv1">
 				<h2 class="channel-title">Первый</h2>
 				<ul class="channel-program">
 					<li>
@@ -47,6 +47,7 @@
 						<div class="title">Время покажет</div>
 					</li>
 				</ul>
+				<a class="load-more-btn" id="tv1-load-more">Ещё</a>
 			</div>
 			<div class="channel russia-1 channel--little">
 				<h2 class="channel-title">Россия 1</h2>
