Added ScrollSpy, date headers, navigation animations

--- a/src/index.html
+++ b/src/index.html
@@ -6,155 +6,349 @@
 	<title>Телепрограмма</title>
 
 	<link rel="stylesheet" href="public/css/main.css">
+	<script src="public/js/complete.js" async defer></script>
 </head>
 <body>
 	<div class="wr">
 		<header class="head">
-			<h1>Тп</h1>
+			<h1><a href="/">Тп</a></h1>
 			<nav class="date-nav">
-				<a href="" class="active">Сегодня</a>
-				<a href="">29, вт</a>
-				<a href="">30, ср</a>
-				<a href="">31, чт</a>
-				<a href="">01, пт</a>
-				<a href="">02, сб</a>
-				<a href="">03, вс</a>
+				<a href="#day-11-04-16">11, пн</a>
+				<a href="#today" class="active">Сегодня</a>
+				<a href="#day-13-04-16">13, ср</a>
+				<a href="#day-14-04-16">14, чт</a>
+				<a href="#day-15-04-16">15, пт</a>
+				<a href="#day-16-04-16">16, сб</a>
+				<a href="#day-17-04-16">17, вс</a>
 			</nav>
 		</header>
 
+
 		<main class="main">
-			<div class="channel tv1 channel--little" id="tv1">
-				<h2 class="channel-title">Первый</h2>
-				<ul class="channel-program">
-					<li>
-						<div class="time">21:00</div>
-						<div class="title">Ленинград 46 (22-я и 23-я серии)</div>
-					</li>
-					<li>
-						<div class="time">01:00</div>
-						<div class="title">Ghbdtn b gjrf</div>
-					</li>
-					<li>
-						<div class="time">10:25</div>
-						<div class="title">Lorem ipsum dolor sit amet.</div>
-					</li>
-					<li>
-						<div class="time">12:00</div>
-						<div class="title">Lorem ipsum dolor sit amet. Lorem ipsum dolor.</div>
-					</li>
-					<li>
-						<div class="time">02:40</div>
-						<div class="title">Время покажет</div>
-					</li>
-				</ul>
-				<a class="load-more-btn" id="tv1-load-more">Ещё</a>
+			<div class="day earlier" id="day-11-04-16">
+				<header class="day__header">Вчера</header>
 			</div>
-			<div class="channel russia-1 channel--little">
-				<h2 class="channel-title">Россия 1</h2>
-				<ul class="channel-program">
-					<li>
-						<div class="time"></div>
-						<div class="title"></div>
-					</li>
-					<li>
-						<div class="time"></div>
-						<div class="title"></div>
-					</li>
-					<li>
-						<div class="time"></div>
-						<div class="title"></div>
-					</li>
-					<li>
-						<div class="time"></div>
-						<div class="title"></div>
-					</li>
-					<li>
-						<div class="time"></div>
-						<div class="title"></div>
-					</li>
-				</ul>
+
+			<div class="day today" id="today">
+				<header class="day__header">Сегодня</header>
+				<div class="channel tv1 channel--little" id="tv1">
+					<h2 class="channel-title"><i class="fa fa-arrow-left back-btn"></i>Первый</h2>
+					<ul class="channel-program">
+
+						<li>
+							<div class="time">05:00</div>
+							<div class="title">Телеканал "Доброе утро"</div>
+							<div class="content-pr">
+								Preview
+							</div>
+						</li>
+						<li>
+							<div class="time">09:00</div>
+							<div class="title">Новости</div>
+						</li>
+						<li class="now">
+							<div class="time">09:20</div>
+							<div class="title">Контрольная закупка</div>
+						</li>
+						<li>
+							<div class="time">09:50</div>
+							<div class="title">Жить здорово!</div>
+						</li>
+						<li>
+							<div class="time">10:55</div>
+							<div class="title">Модный приговор</div>
+						</li>
+						<li>
+							<div class="time">12:00</div>
+							<div class="title">Новости с субтитрами</div>
+						</li>
+						<li>
+							<div class="time">12:15</div>
+							<div class="title">Пусть говорят</div>
+						</li>
+						<li>
+							<div class="time">13:25</div>
+							<div class="title">Таблетка</div>
+						</li>
+						<li>
+							<div class="time">13:55</div>
+							<div class="title">Время покажет</div>
+						</li>
+						<li>
+							<div class="time">15:00</div>
+							<div class="title">Новости с субтитрами</div>
+						</li>
+						<li>
+							<div class="time">15:15</div>
+							<div class="title">Время покажет</div>
+						</li>
+						<li>
+							<div class="time">16:00</div>
+							<div class="title">Мужское / Женское</div>
+						</li>
+						<li>
+							<div class="time">17:00</div>
+							<div class="title">Наедине со всеми. Суррогатная бабушка</div>
+						</li>
+						<li>
+							<div class="time">18:00</div>
+							<div class="title">Вечерние новости с субтитрами</div>
+						</li>
+						<li>
+							<div class="time">18:45</div>
+							<div class="title">Давай поженимся!</div>
+						</li>
+						<li>
+							<div class="time">19:50</div>
+							<div class="title">"Пусть говорят" с Андреем Малаховым</div>
+						</li>
+						<li>
+							<div class="time">21:00</div>
+							<div class="title">Время</div>
+						</li>
+						<li>
+							<div class="time">21:30</div>
+							<div class="title">Лестница в небеса. 11-я и 12-я серии</div>
+						</li>
+						<li>
+							<div class="time">23:40</div>
+							<div class="title">Вечерний Ургант. Антон Комолов</div>
+						</li>
+						<li>
+							<div class="time">00:00</div>
+							<div class="title">Познер. Денис Мантуров</div>
+						</li>
+						<li>
+							<div class="time">01:00</div>
+							<div class="title">Ночные новости</div>
+						</li>
+						<li>
+							<div class="time">01:15</div>
+							<div class="title">Время покажет</div>
+						</li>
+						<li>
+							<div class="time">02:10</div>
+							<div class="title">Наедине со всеми. Суррогатная бабушка</div>
+						</li>
+						<li>
+							<div class="time">03:00</div>
+							<div class="title">Новости</div>
+						</li>
+						<li>
+							<div class="time">03:05</div>
+							<div class="title">Наедине со всеми. Суррогатная бабушка</div>
+						</li>
+						<li>
+							<div class="time">03:20</div>
+							<div class="title">Модный приговор</div>
+						</li>
+						<li>
+							<div class="time">04:20</div>
+							<div class="title">Контрольная закупка</div>
+						</li>
+
+					</ul>
+					<a class="load-more-btn" id="tv1-load-more">Ещё</a>
+				</div>
+				<div class="channel russia-1 channel--little" id="russia-1">
+					<h2 class="channel-title"><i class="fa fa-arrow-left back-btn"></i>Россия 1</h2>
+					<ul class="channel-program">
+						
+						<li>
+							<div class="time">05:00</div>
+							<div class="title">Телеканал "Доброе утро"</div>
+						</li>
+						<li>
+							<div class="time">09:00</div>
+							<div class="title">Новости</div>
+						</li>
+						<li>
+							<div class="time">09:20</div>
+							<div class="title">Контрольная закупка</div>
+						</li>
+						<li>
+							<div class="time">09:50</div>
+							<div class="title">Жить здорово!</div>
+						</li>
+						<li>
+							<div class="time">10:55</div>
+							<div class="title">Модный приговор</div>
+						</li>
+						<li>
+							<div class="time">12:00</div>
+							<div class="title">Новости с субтитрами</div>
+						</li>
+						<li>
+							<div class="time">12:15</div>
+							<div class="title">Пусть говорят</div>
+						</li>
+						<li>
+							<div class="time">13:25</div>
+							<div class="title">Таблетка</div>
+						</li>
+						<li>
+							<div class="time">13:55</div>
+							<div class="title">Время покажет</div>
+						</li>
+						<li>
+							<div class="time">15:00</div>
+							<div class="title">Новости с субтитрами</div>
+						</li>
+						<li>
+							<div class="time">15:15</div>
+							<div class="title">Время покажет</div>
+						</li>
+						<li>
+							<div class="time">16:00</div>
+							<div class="title">Мужское / Женское</div>
+						</li>
+						<li>
+							<div class="time">17:00</div>
+							<div class="title">Наедине со всеми. Суррогатная бабушка</div>
+						</li>
+						<li>
+							<div class="time">18:00</div>
+							<div class="title">Вечерние новости с субтитрами</div>
+						</li>
+						<li>
+							<div class="time">18:45</div>
+							<div class="title">Давай поженимся!</div>
+						</li>
+						<li>
+							<div class="time">19:50</div>
+							<div class="title">"Пусть говорят" с Андреем Малаховым</div>
+						</li>
+						<li>
+							<div class="time">21:00</div>
+							<div class="title">Время</div>
+						</li>
+						<li>
+							<div class="time">21:30</div>
+							<div class="title">Лестница в небеса. 11-я и 12-я серии</div>
+						</li>
+						<li>
+							<div class="time">23:40</div>
+							<div class="title">Вечерний Ургант. Антон Комолов</div>
+						</li>
+						<li>
+							<div class="time">00:00</div>
+							<div class="title">Познер. Денис Мантуров</div>
+						</li>
+						<li>
+							<div class="time">01:00</div>
+							<div class="title">Ночные новости</div>
+						</li>
+						<li>
+							<div class="time">01:15</div>
+							<div class="title">Время покажет</div>
+						</li>
+						<li>
+							<div class="time">02:10</div>
+							<div class="title">Наедине со всеми. Суррогатная бабушка</div>
+						</li>
+						<li>
+							<div class="time">03:00</div>
+							<div class="title">Новости</div>
+						</li>
+						<li>
+							<div class="time">03:05</div>
+							<div class="title">Наедине со всеми. Суррогатная бабушка</div>
+						</li>
+						<li>
+							<div class="time">03:20</div>
+							<div class="title">Модный приговор</div>
+						</li>
+						<li>
+							<div class="time">04:20</div>
+							<div class="title">Контрольная закупка</div>
+						</li>
+
+					</ul>
+					<a class="load-more-btn" id="russia-1-load-more">Ещё</a>
+				</div>
+				<div class="channel match-tv channel--little">
+					<h2 class="channel-title">Матч ТВ</h2>
+					<ul class="channel-program">
+						<li>
+							<div class="time"></div>
+							<div class="title"></div>
+						</li>
+						<li>
+							<div class="time"></div>
+							<div class="title"></div>
+						</li>
+						<li>
+							<div class="time"></div>
+							<div class="title"></div>
+						</li>
+						<li>
+							<div class="time"></div>
+							<div class="title"></div>
+						</li>
+						<li>
+							<div class="time"></div>
+							<div class="title"></div>
+						</li>
+					</ul>
+				</div>
+				<div class="channel sts channel--little">
+					<h2 class="channel-title">СТС</h2>
+					<ul class="channel-program">
+						<li>
+							<div class="time"></div>
+							<div class="title"></div>
+						</li>
+						<li>
+							<div class="time"></div>
+							<div class="title"></div>
+						</li>
+						<li>
+							<div class="time"></div>
+							<div class="title"></div>
+						</li>
+						<li>
+							<div class="time"></div>
+							<div class="title"></div>
+						</li>
+						<li>
+							<div class="time"></div>
+							<div class="title"></div>
+						</li>
+					</ul>
+				</div>
+				<div class="channel tnt channel--little">
+					<h2 class="channel-title">ТНТ</h2>
+					<ul class="channel-program">
+						<li>
+							<div class="time"></div>
+							<div class="title"></div>
+						</li>
+						<li>
+							<div class="time"></div>
+							<div class="title"></div>
+						</li>
+						<li>
+							<div class="time"></div>
+							<div class="title"></div>
+						</li>
+						<li>
+							<div class="time"></div>
+							<div class="title"></div>
+						</li>
+						<li>
+							<div class="time"></div>
+							<div class="title"></div>
+						</li>
+					</ul>
+				</div>
 			</div>
-			<div class="channel match-tv channel--little">
-				<h2 class="channel-title">Матч ТВ</h2>
-				<ul class="channel-program">
-					<li>
-						<div class="time"></div>
-						<div class="title"></div>
-					</li>
-					<li>
-						<div class="time"></div>
-						<div class="title"></div>
-					</li>
-					<li>
-						<div class="time"></div>
-						<div class="title"></div>
-					</li>
-					<li>
-						<div class="time"></div>
-						<div class="title"></div>
-					</li>
-					<li>
-						<div class="time"></div>
-						<div class="title"></div>
-					</li>
-				</ul>
-			</div>
-			<div class="channel sts channel--little">
-				<h2 class="channel-title">СТС</h2>
-				<ul class="channel-program">
-					<li>
-						<div class="time"></div>
-						<div class="title"></div>
-					</li>
-					<li>
-						<div class="time"></div>
-						<div class="title"></div>
-					</li>
-					<li>
-						<div class="time"></div>
-						<div class="title"></div>
-					</li>
-					<li>
-						<div class="time"></div>
-						<div class="title"></div>
-					</li>
-					<li>
-						<div class="time"></div>
-						<div class="title"></div>
-					</li>
-				</ul>
-			</div>
-			<div class="channel tnt channel--little">
-				<h2 class="channel-title">ТНТ</h2>
-				<ul class="channel-program">
-					<li>
-						<div class="time"></div>
-						<div class="title"></div>
-					</li>
-					<li>
-						<div class="time"></div>
-						<div class="title"></div>
-					</li>
-					<li>
-						<div class="time"></div>
-						<div class="title"></div>
-					</li>
-					<li>
-						<div class="time"></div>
-						<div class="title"></div>
-					</li>
-					<li>
-						<div class="time"></div>
-						<div class="title"></div>
-					</li>
-				</ul>
+
+			<div class="day later" id="day-13-04-16">
+				<header class="day__header">Завтра</header>
+				  
 			</div>
 		</main>
 	</div>
 
-<!-- build:js public/js/complete.js -->
-<script src="libs/jquery/dist/jquery.min.js"></script>
-<script src="js/main.js"></script>
-<!-- endbuild -->
 </body>
 </html>
